add method for estimate logs count (#1096)