@@ -123,7 +123,15 @@ dependencies {
     implementation(variantOf(libs.netty.tcnative.boringssl) { classifier("linux-x86_64") })
     implementation(variantOf(libs.netty.tcnative.boringssl) { classifier("osx-x86_64") })
     implementation 'dshackle:foundation:1.0.0'
+
+    implementation files('src/main/resources/LogsOracle.jar')
 }
+
+// Enable 'Foreign Function & Memory API' (JEP 434)
+// Drop after update on Java 21
+tasks.withType(JavaCompile) { options.compilerArgs += "--enable-preview" }
+tasks.withType(Test) { jvmArgs += "--enable-preview" }
+tasks.withType(JavaExec) { jvmArgs += "--enable-preview" }
 
 compileKotlin {
     compilerOptions.jvmTarget.set(JvmTarget.JVM_20)
@@ -132,6 +140,7 @@ compileTestKotlin {
     compilerOptions.jvmTarget.set(JvmTarget.JVM_20)
 }
 
+/*
 test {
     jvmArgs '-ea'
     testLogging.showStandardStreams = false
@@ -154,6 +163,7 @@ test {
     //
     systemProperty "keystore.pkcs12.keyProtectionAlgorithm", "PBEWithHmacSHA256AndAES_256"
 }
+*/
 
 application {
     getMainClass().set('io.emeraldpay.dshackle.StarterKt')
